--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,14 @@
 ---
 galaxy_info:
   author: Tomoyuki Sakurai
-  description: Configures something
+  description: Configure buildbot worker
   company: N/A
   license: BSD
   min_ansible_version: 2.0
   platforms:
     - name: FreeBSD
       versions:
-        - 11.2
+        - 12.0
   galaxy_tags:
-    - system
+    - buildbot
+    - ci
