--- a/vars/FreeBSD.yml
+++ b/vars/FreeBSD.yml
@@ -1,3 +1,7 @@
 ---
-__buildbot_worker_db_dir: /var/db/buildbot_worker
-__buildbot_worker_conf_dir: /usr/local/etc/buildbot_worker
+__buildbot_worker_user: buildbot
+__buildbot_worker_group: buildbot
+__buildbot_worker_service: buildbot-worker
+__buildbot_worker_package: devel/py-buildbot-worker
+__buildbot_worker_root_dir: /usr/local/etc/buildbot_worker
+__buildbot_worker_conf_dir: "{{ __buildbot_worker_root_dir }}"
