feature: initial Ubuntu support
however, the package is too old and the daemon of that version does not
exit until it successfully connects to a master. as a result, ansible
play fails with timeout.

support buildbot_worker_extra_packages

--- a/tasks/install-FreeBSD.yml
+++ b/tasks/install-FreeBSD.yml
@@ -5,7 +5,13 @@
     name: "{{ buildbot_worker_package }}"
     state: present
 
+- name: Install buildbot_worker_extra_packages
+  pkgng:
+    name: "{{ buildbot_worker_extra_packages }}"
+    state: present
+
 - name: Create buildbot_worker_group
+  # XXX the port does not crate user
   group:
     name: "{{ buildbot_worker_group }}"
 
