--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -3,6 +3,16 @@
   roles:
     - ansible-role-buildbot_worker
   vars:
+    buildbot_worker_flags_freebsd: ""
+    buildbot_worker_flags_ubuntu: |
+      WORKER_ENABLED[1]=1                    # 1-enabled, 0-disabled
+      WORKER_NAME[1]="default"               # short name printed on start/stop
+      WORKER_USER[1]="buildbot"              # user to run worker as
+      WORKER_BASEDIR[1]="{{ buildbot_worker_conf_dir }}"  # basedir to worker (absolute path)
+      WORKER_OPTIONS[1]=""                   # buildbot options
+      WORKER_PREFIXCMD[1]=""                 # prefix command, i.e. nice, linux32, dchroot
+
+    buildbot_worker_flags: "{% if ansible_os_family == 'FreeBSD' %}{{ buildbot_worker_flags_freebsd }}{% elif ansible_os_family == 'Debian' %}{{ buildbot_worker_flags_ubuntu }}{% endif %}"
     buildbot_worker_config: |
       import os
       from buildbot_worker.bot import Worker
