--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -32,6 +32,10 @@ platforms:
       extra_vars:
         ansible_python_interpreter: '/usr/local/bin/python'
 
+  - name: ubuntu-18.04-amd64
+    driver:
+      box: trombik/ansible-ubuntu-18.04-amd64
+
 suites:
   - name: default
     provisioner:
