bugfix: set home directory when creating the user
change config directory to `/usr/local/buildbot_worker`.

the directory is used as work direcrectory, which should not be under
`/usr/local/etc`.

--- a/tasks/install-FreeBSD.yml
+++ b/tasks/install-FreeBSD.yml
@@ -19,6 +19,7 @@
   user:
     name: "{{ buildbot_worker_user }}"
     group: "{{ buildbot_worker_group }}"
+    home: "{{ buildbot_worker_conf_dir }}"
 
 - name: Create buildbot_worker_flags file
   template:
