--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,9 @@ galaxy_info:
     - name: FreeBSD
       versions:
         - 12.0
+    - name: OpenBSD
+      versions:
+        - 6.5
   galaxy_tags:
     - buildbot
     - ci
