--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,7 +13,7 @@ provisioner:
   ansible_verbosity: 1
   ansible_verbose: true
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
-  # requirements_path: requirements.yml
+  requirements_path: requirements.yml
   http_proxy: <%= ENV['ANSIBLE_PROXY'] %>
   idempotency_test: true
   additional_copy_path:
@@ -21,20 +21,20 @@ provisioner:
     - filter_plugins
 
 platforms:
-  - name: freebsd-12.0-amd64
+  - name: freebsd-13.0-amd64
     driver:
-      box: trombik/ansible-freebsd-12.0-amd64
+      box: trombik/ansible-freebsd-13.0-amd64
       box_check_update: false
     driver_config:
       ssh:
         shell: '/bin/sh'
     provisioner:
       extra_vars:
-        ansible_python_interpreter: '/usr/local/bin/python'
+        ansible_python_interpreter: '/usr/local/bin/python3'
 
-  - name: openbsd-6.5-amd64
+  - name: openbsd-7.0-amd64
     driver:
-      box: trombik/ansible-openbsd-6.5-amd64
+      box: trombik/ansible-openbsd-7.0-amd64
       box_check_update: false
     driver_config:
       ssh:
