--- a/tasks/install-FreeBSD.yml
+++ b/tasks/install-FreeBSD.yml
@@ -1,34 +1,35 @@
 ---
 
 - name: Install buildbot_worker
-  pkgng:
+  ansible.builtin.pkgng:
     name: "{{ buildbot_worker_package }}"
     state: present
 
 - name: Install buildbot_worker_extra_packages
-  pkgng:
+  ansible.builtin.pkgng:
     name: "{{ buildbot_worker_extra_packages }}"
     state: present
 
 - name: Create buildbot_worker_group
   # XXX the port does not crate user
-  group:
+  ansible.builtin.group:
     name: "{{ buildbot_worker_group }}"
 
 - name: Create buildbot_worker_user
-  user:
+  ansible.builtin.user:
     name: "{{ buildbot_worker_user }}"
     group: "{{ buildbot_worker_group }}"
     home: "{{ buildbot_worker_conf_dir }}"
 
 - name: Create buildbot_worker_flags file
-  template:
+  ansible.builtin.template:
     src: FreeBSD.rcd.j2
     dest: "/etc/rc.conf.d/{{ buildbot_worker_service | regex_replace('-', '_') }}"
     validate: sh -n %s
+    mode: "0644"
   notify: Restart buildbot_worker
 
 - name: Enable buildbot_worker_service
-  service:
+  ansible.builtin.service:
     name: "{{ buildbot_worker_service }}"
     enabled: yes
