--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -10,6 +10,11 @@
         buildbot_worker_basedir="{{ buildbot_worker_conf_dir }}"
       # "
       Debian: |
+        #WORKER_RUNNER=/usr/bin/buildbot-worker
+
+        # 'true|yes|1' values in WORKER_ENABLED to enable instance and 'false|no|0' to
+        # disable. Other values will be considered as syntax error.
+
         WORKER_ENABLED[1]=1                    # 1-enabled, 0-disabled
         WORKER_NAME[1]="default"               # short name printed on start/stop
         WORKER_USER[1]="buildbot"              # user to run worker as
